# Triangles

./: .gitignore  CMakeLists.txt  Ideas_for_algorithm.txt  LICENSE  README.md  Some floating point observations.txt
include/: collision_manager.hpp  double_comparison.hpp  intersection.hpp  intersector.hpp  line.hpp  plane.hpp  point.hpp  segment.hpp  triangle.hpp  vector.hpp
include/intersection/: intersection.hpp  intersection_2D.hpp  magic_product.hpp  point_point.hpp  point_segment.hpp  point_triangle.hpp  segment_segment.hpp  segment_triangle.hpp  space_to_plane.hpp  triangle_triangle.hpp
include/primitives/: point.hpp  primitive_traits.hpp  segment.hpp  triangle.hpp  vector.hpp
include/space_partioning/: axis_aligned_bounding_box.hpp
include/space_partitioning/: axis_aligned_bounding_box.hpp  intersector.hpp  node.hpp  object.hpp  octree.hpp  shape.hpp
src/: intersection.cpp  plane.cpp  point.cpp  vector.cpp
test/: CMakeLists.txt
test/algorithm/: CMakeLists.txt
test/algorithm/src/: degenerate_cases_test.cpp  intersection.cpp  intersection_2D_test.cpp  magic_product.cpp  point_segment.cpp  point_triangle.cpp  segment_segment.cpp  segment_triangle.cpp  transform_triangle.cpp  transform_triangles.cpp  triangle_triangle.cpp
test/basic_tests/: CMakeLists.txt  intersection_2D_test.cpp  line_test.cpp  plane_test.cpp  test_double_comparison.cpp  test_point.cpp  test_vector.cpp
test/basic_tests/src/: double_comparison.cpp  point.cpp  segment.cpp  segment_test.cpp  triangle.cpp  triangle_test.cpp  vector.cpp
test/end_to_end/: CMakeLists.txt  checker.sh  driver.cpp
test/end_to_end/src/: driver.cpp  generator.cpp  model_collision_manager.py
test/include/: algorithm_testing.hpp
